# open_bingo

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: pages.yml  release.yml
bingo-app/: package-lock.json  package.json  server.js
bingo-app/public/: index.html  landing.html  version.json
bingo-app/public/js/: cases.js  config.js  generator.js  grids.js  main.js  play.js  print.js  projects.js  share.js  state.js  ui.js
bingo-app/public/style/: dashboard.css  grid.css  main.css  play.css  print.css
scripts/: build-android.sh  build-linux.sh  build-macos.sh  build-windows.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
