[package]
name        = "open-bingo"
version     = "1.0.0"
edition     = "2021"
description = "Générateur de grilles de bingo"
authors     = []

[lib]
name       = "open_bingo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "open-bingo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = [] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
