[package]
name        = "open-bingo"
version     = "1.2.6"
edition     = "2021"
description = "Générateur de grilles de bingo"
license     = "GPL-3.0-only"
authors     = []

[lib]
name       = "open_bingo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "open-bingo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = [] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Dialogue natif de sauvegarde (desktop uniquement — ne compile pas sur Android/iOS)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
rfd = "0.15"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
